<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Black"
    tools:context=".ReporterActivity">


    <ImageView
        android:background="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text"
        android:text="@string/find"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/Lorem"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/industry"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="12dp"
        android:textStyle="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <EditText
            android:background="@color/white"
            android:hint="@string/search"
            android:textSize="14dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        </LinearLayout>
        <LinearLayout

            android:background="@color/background_color"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp">

            <ImageView
                android:background="@drawable/ic_search"
                android:layout_width="30dp"
                android:layout_height="30dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>