<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/textcolor"
    tools:context=".ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:minHeight="?attr/actionBarSize"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_menu" />

        <EditText
            android:background="@color/white"
            android:hint="@string/contact"
            android:textSize="14dp"
            android:drawableLeft="@drawable/ic_search"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="30dp" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_appss"
            />
    </android.support.v7.widget.Toolbar>




    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@color/Black"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="60dp">
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:background="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"

        android:layout_marginLeft="80dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/dr1"
            app:civ_border_color="@color/white"
            app:civ_border_width="3dp" />


        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:textColor="@color/background_color"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:textColor="@color/text_color"
                    android:text="@string/working"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </LinearLayout>



        </LinearLayout>

                <Button
                    android:id="@+id/addBTN4"
                    android:text="Report A Change"
                    android:textColor="@color/background_color"
                    android:gravity="center"
                    android:textSize="10dp"
                    android:background="@drawable/shadow_button"
                    android:layout_marginTop="20dp"
                    android:layout_width="100dp"
                    android:layout_height="20dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:textStyle="bold"

            android:textColor="@color/blacks"
            android:text="@string/cont" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_email" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:text="Email" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="12dp"
                    android:textColor="@color/text_color"
                    android:text="@string/email" />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_phon" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/text_color"
                    android:text="Mobile" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="12dp"
                    android:textColor="@color/text_color"
                    android:text="@string/mobile" />

            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_phone" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="12dp"
                    android:textStyle="bold"

                    android:textColor="@color/text_color"
                    android:text="Landline" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="12dp"
                    android:textColor="@color/text_color"
                    android:text="@string/mobile"
                 />

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:textColor="@color/blacks"
            android:text="Social Links" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_email" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_email" /><ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_email" /><ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_email" /><ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_email" /><ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_email" /><ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_email" />

        </LinearLayout>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
